--- a/html/projects/butterfly.html
+++ b/html/projects/butterfly.html
@@ -8,7 +8,7 @@
       content="Explore The Butterfly Childcare - A modern website for a Childcare business. Learn about the facility, its services, and educational philosophy. Empowering parents to make informed decisions for their child's care and education."
     />
     <title>Simone Susino | Web Developer | The Butterfly</title>
-    <link rel="stylesheet" href="/assets/css/styles.css" />
+    <link rel="stylesheet" href="assets/css/styles.css" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
@@ -17,21 +17,21 @@
     <link
       rel="apple-touch-icon"
       sizes="180x180"
-      href="/assets/images/favicon/apple-touch-icon.png"
+      href="assets/images/favicon/apple-touch-icon.png"
     />
     <link
       rel="icon"
       type="image/png"
       sizes="32x32"
-      href="/assets/images/favicon/favicon-32x32.png"
+      href="assets/images/favicon/favicon-32x32.png"
     />
     <link
       rel="icon"
       type="image/png"
       sizes="16x16"
-      href="/assets/images/favicon/favicon-16x16.png"
+      href="assets/images/favicon/favicon-16x16.png"
     />
-    <link rel="manifest" href="/assets/images/favicon/site.webmanifest" />
+    <link rel="manifest" href="assets/images/favicon/site.webmanifest" />
   </head>
   <body class="no-overflow">
     <header>
@@ -39,7 +39,7 @@
         <div class="logo-container">
           <a href="../../index.html" aria-label="Home">
             <img
-              src="/assets/images/logo.webp"
+              src="assets/images/logo.webp"
               alt="Logo"
               class="logo"
               width="2048"
@@ -94,7 +94,7 @@
 
       <div class="two projects-content image">
         <img
-          src="/assets/images/butterfly/butterfly-overview-devices-logo.webp"
+          src="assets/images/butterfly/butterfly-overview-devices-logo.webp"
           alt="The Butterfly - Crèche & Childcare"
           width="6569"
           height="3636"
@@ -117,7 +117,7 @@
 
         <div class="section-image image">
           <img
-            src="/assets/images/butterfly/macbook-butterfly.webp"
+            src="assets/images/butterfly/macbook-butterfly.webp"
             alt="The Butterfly on MacBook"
             width="3000"
             height="2250"
@@ -171,7 +171,7 @@
 
         <div class="section-image image">
           <img
-            src="/assets/images/butterfly/iphone-butterfly.webp"
+            src="assets/images/butterfly/iphone-butterfly.webp"
             alt="DiMOS - Model-View-Controller"
             width="3000"
             height="2250"
@@ -210,7 +210,7 @@
 
         <div class="section-image image">
           <img
-            src="/assets/images/butterfly/ipadpro-butterfly.webp"
+            src="assets/images/butterfly/ipadpro-butterfly.webp"
             alt="The Butterfly on iPad"
             width="3000"
             height="2250"
@@ -240,7 +240,7 @@
 
         <div class="section-image image">
           <img
-            src="/assets/images/butterfly/butterfly-overview-devices.webp"
+            src="assets/images/butterfly/butterfly-overview-devices.webp"
             alt="The Butterfly on Multiple Devices"
             width="6569"
             height="3636"
@@ -264,9 +264,9 @@
       </section>
     </div>
 
-    <script src="/assets/js/hamburger.js"></script>
-    <script src="/assets/js/fade.js"></script>
-    <script src="/assets/js/current-page.js"></script>
-    <script src="/assets/js/progress-bar.js"></script>
+    <script src="assets/js/hamburger.js"></script>
+    <script src="assets/js/fade.js"></script>
+    <script src="assets/js/current-page.js"></script>
+    <script src="assets/js/progress-bar.js"></script>
   </body>
 </html>
