--- a/html/about.html
+++ b/html/about.html
@@ -8,7 +8,7 @@
       content="Learn more about me. I am a passionate frontend web developer with a background in Information Systems and Information Technology. Explore my skills, projects, and experiences."
     />
     <title>Simone Susino | Web Developer | About</title>
-    <link rel="stylesheet" href="assets/css/styles.css" />
+    <link rel="stylesheet" href="../assets/css/styles.css" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
@@ -16,21 +16,21 @@
     <link
       rel="apple-touch-icon"
       sizes="180x180"
-      href="assets/images/favicon/apple-touch-icon.png"
+      href="../assets/images/favicon/apple-touch-icon.png"
     />
     <link
       rel="icon"
       type="image/png"
       sizes="32x32"
-      href="assets/images/favicon/favicon-32x32.png"
+      href="../assets/images/favicon/favicon-32x32.png"
     />
     <link
       rel="icon"
       type="image/png"
       sizes="16x16"
-      href="assets/images/favicon/favicon-16x16.png"
+      href="../assets/images/favicon/favicon-16x16.png"
     />
-    <link rel="manifest" href="assets/images/favicon/site.webmanifest" />
+    <link rel="manifest" href="../assets/images/favicon/site.webmanifest" />
   </head>
   <body>
     <header>
@@ -38,7 +38,7 @@
         <div class="logo-container">
           <a href="../index.html" aria-label="Home">
             <img
-              src="assets/images/logo.webp"
+              src="../assets/images/logo.webp"
               alt="Logo"
               class="logo"
               width="2048"
@@ -93,7 +93,7 @@
 
       <div class="two about image">
         <img
-          src="assets/images/about/stencil.webp"
+          src="../assets/images/about/stencil.webp"
           alt="Me"
           width="435"
           height="393"
@@ -151,9 +151,9 @@
       </section>
     </div>
 
-    <script src="assets/js/hamburger.js"></script>
-    <script src="assets/js/fade.js"></script>
-    <script src="assets/js/current-page.js"></script>
-    <script src="assets/js/progress-bar.js"></script>
+    <script src="../assets/js/hamburger.js"></script>
+    <script src="../assets/js/fade.js"></script>
+    <script src="../assets/js/current-page.js"></script>
+    <script src="../assets/js/progress-bar.js"></script>
   </body>
 </html>
