--- a/html/projects.html
+++ b/html/projects.html
@@ -8,7 +8,7 @@
       content="Explore my works. Discover DiMOS, a Digital Menu Ordering System, and The Butterfly, a modern website for a Childcare business."
     />
     <title>Simone Susino | Web Developer | Projects</title>
-    <link rel="stylesheet" href="/assets/css/styles.css" />
+    <link rel="stylesheet" href="../assets/css/styles.css" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
@@ -17,21 +17,21 @@
     <link
       rel="apple-touch-icon"
       sizes="180x180"
-      href="/assets/images/favicon/apple-touch-icon.png"
+      href="../assets/images/favicon/apple-touch-icon.png"
     />
     <link
       rel="icon"
       type="image/png"
       sizes="32x32"
-      href="/assets/images/favicon/favicon-32x32.png"
+      href="../assets/images/favicon/favicon-32x32.png"
     />
     <link
       rel="icon"
       type="image/png"
       sizes="16x16"
-      href="/assets/images/favicon/favicon-16x16.png"
+      href="../assets/images/favicon/favicon-16x16.png"
     />
-    <link rel="manifest" href="/assets/images/favicon/site.webmanifest" />
+    <link rel="manifest" href="../assets/images/favicon/site.webmanifest" />
   </head>
   <body class="no-scrolling">
     <header>
@@ -39,7 +39,7 @@
         <div class="logo-container">
           <a href="../index.html" aria-label="Home">
             <img
-              src="/assets/images/logo.webp"
+              src="../assets/images/logo.webp"
               alt="Logo"
               class="logo"
               width="2048"
@@ -95,7 +95,7 @@
       </div>
     </div>
 
-    <script src="/assets/js/hamburger.js"></script>
-    <script src="/assets/js/current-page.js"></script>
+    <script src="../assets/js/hamburger.js"></script>
+    <script src="../assets/js/current-page.js"></script>
   </body>
 </html>
