--- a/html/contact.html
+++ b/html/contact.html
@@ -133,7 +133,7 @@
         <div class="form">
           <div class="form-wrapper">
             <form
-              action="/html/form-handler.php"
+              action="html/form-handler.php"
               method="POST"
               aria-label="Contact form"
             >
