--- a/html/about.html
+++ b/html/about.html
@@ -60,7 +60,7 @@
             <a href="../index.html" aria-label="Home">Home</a>
           </li>
           <li tabindex="0">
-            <a href="/html/about.html" aria-label="About">About</a>
+            <a href="html/about.html" aria-label="About">About</a>
           </li>
           <li tabindex="0">
             <a href="/html/projects.html" aria-label="Projects">Projects</a>
