--- a/404.html
+++ b/404.html
@@ -8,7 +8,7 @@
       content="Oops! It looks like the page you were looking for is not available. We apologize for the inconvenience."
     />
     <title>Simone Susino | Web Developer | 404 Error</title>
-    <link rel="stylesheet" href="/assets/css/styles.css" />
+    <link rel="stylesheet" href="assets/css/styles.css" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
@@ -16,21 +16,21 @@
     <link
       rel="apple-touch-icon"
       sizes="180x180"
-      href="/assets/images/favicon/apple-touch-icon.png"
+      href="assets/images/favicon/apple-touch-icon.png"
     />
     <link
       rel="icon"
       type="image/png"
       sizes="32x32"
-      href="/assets/images/favicon/favicon-32x32.png"
+      href="assets/images/favicon/favicon-32x32.png"
     />
     <link
       rel="icon"
       type="image/png"
       sizes="16x16"
-      href="/assets/images/favicon/favicon-16x16.png"
+      href="assets/images/favicon/favicon-16x16.png"
     />
-    <link rel="manifest" href="/assets/images/favicon/site.webmanifest" />
+    <link rel="manifest" href="assets/images/favicon/site.webmanifest" />
   </head>
   <body>
     <header>
@@ -38,7 +38,7 @@
         <div class="logo-container">
           <a href="../index.html" aria-label="Home">
             <img
-              src="/assets/images/logo.webp"
+              src="assets/images/logo.webp"
               alt="Logo"
               class="logo"
               width="2048"
@@ -60,13 +60,13 @@
             <a href="../index.html" aria-label="Home">Home</a>
           </li>
           <li tabindex="0">
-            <a href="/html/about.html" aria-label="About">About</a>
+            <a href="html/about.html" aria-label="About">About</a>
           </li>
           <li tabindex="0">
-            <a href="/html/projects.html" aria-label="Projects">Projects</a>
+            <a href="html/projects.html" aria-label="Projects">Projects</a>
           </li>
           <li tabindex="0">
-            <a href="/html/contact.html" aria-label="Contact">Contact</a>
+            <a href="html/contact.html" aria-label="Contact">Contact</a>
           </li>
           <li tabindex="0">
             <a href="/blog" aria-label="Blog">Blog</a>
@@ -90,7 +90,7 @@
       </section>
     </div>
 
-    <script src="/assets/js/hamburger.js"></script>
-    <script src="/assets/js/fade.js"></script>
+    <script src="assets/js/hamburger.js"></script>
+    <script src="assets/js/fade.js"></script>
   </body>
 </html>
