--- a/html/projects.html
+++ b/html/projects.html
@@ -61,13 +61,13 @@
             <a href="../index.html" aria-label="Home">Home</a>
           </li>
           <li tabindex="0">
-            <a href="/html/about.html" aria-label="About">About</a>
+            <a href="about.html" aria-label="About">About</a>
           </li>
           <li tabindex="0">
-            <a href="/html/projects.html" aria-label="Projects">Projects</a>
+            <a href="projects.html" aria-label="Projects">Projects</a>
           </li>
           <li tabindex="0">
-            <a href="/html/contact.html" aria-label="Contact">Contact</a>
+            <a href="contact.html" aria-label="Contact">Contact</a>
           </li>
           <li tabindex="0">
             <a href="/blog" aria-label="Blog">Blog</a>
@@ -84,11 +84,11 @@
       <div class="navigation">
         <ul>
           <li class="nav-item one projects">
-            <a href="/html/projects/dimos.html">DiMOS</a>
+            <a href="projects/dimos.html">DiMOS</a>
             <p class="subtitle">A Digital Menu Ordering System</p>
           </li>
           <li class="nav-item two projects">
-            <a href="/html/projects/butterfly.html">The Butterfly</a>
+            <a href="projects/butterfly.html">The Butterfly</a>
             <p class="subtitle">A modern website for a Childcare business</p>
           </li>
         </ul>
