--- a/html/projects/butterfly.html
+++ b/html/projects/butterfly.html
@@ -8,7 +8,7 @@
       content="Explore The Butterfly Childcare - A modern website for a Childcare business. Learn about the facility, its services, and educational philosophy. Empowering parents to make informed decisions for their child's care and education."
     />
     <title>Simone Susino | Web Developer | The Butterfly</title>
-    <link rel="stylesheet" href="../assets/css/styles.css" />
+    <link rel="stylesheet" href="../../assets/css/styles.css" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
