--- a/html/projects/butterfly.html
+++ b/html/projects/butterfly.html
@@ -249,9 +249,7 @@
 
         <p>
           Website available at:
-          <a
-            href="https://www.simonesusino.com/butterflychildcare"
-            target="_blank"
+          <a href="https://simworld.github.io/The-Butterfly" target="_blank"
             >The Butterfly - Crèche &amp; Childcare</a
           >
         </p>
