--- a/html/projects/dimos.html
+++ b/html/projects/dimos.html
@@ -8,7 +8,7 @@
       content="Explore DiMOS, a Digital Menu Ordering. Learn how DiMOS revolutionizes order management in restaurants with real-time updates, user-friendly interfaces, and data insights."
     />
     <title>Simone Susino | Web Developer | DiMOS</title>
-    <link rel="stylesheet" href="/assets/css/styles.css" />
+    <link rel="stylesheet" href="../../assets/css/styles.css" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
@@ -17,21 +17,21 @@
     <link
       rel="apple-touch-icon"
       sizes="180x180"
-      href="/assets/images/favicon/apple-touch-icon.png"
+      href="../../assets/images/favicon/apple-touch-icon.png"
     />
     <link
       rel="icon"
       type="image/png"
       sizes="32x32"
-      href="/assets/images/favicon/favicon-32x32.png"
+      href="../../assets/images/favicon/favicon-32x32.png"
     />
     <link
       rel="icon"
       type="image/png"
       sizes="16x16"
-      href="/assets/images/favicon/favicon-16x16.png"
+      href="../../assets/images/favicon/favicon-16x16.png"
     />
-    <link rel="manifest" href="/assets/images/favicon/site.webmanifest" />
+    <link rel="manifest" href="../../assets/images/favicon/site.webmanifest" />
   </head>
   <body class="no-overflow">
     <header>
@@ -39,7 +39,7 @@
         <div class="logo-container">
           <a href="../../index.html" aria-label="Home">
             <img
-              src="/assets/images/logo.webp"
+              src="../../assets/images/logo.webp"
               alt="Logo"
               class="logo"
               width="2048"
@@ -94,7 +94,7 @@
 
       <div class="two projects-content image">
         <img
-          src="/assets/images/dimos/dimos-overview-devices-logo.webp"
+          src="../../assets/images/dimos/dimos-overview-devices-logo.webp"
           alt="DiMOS"
           width="6569"
           height="3636"
@@ -115,7 +115,7 @@
 
         <div class="section-image image">
           <img
-            src="/assets/images/dimos/ipadmini-dimos.webp"
+            src="../../assets/images/dimos/ipadmini-dimos.webp"
             alt="DiMOS on iPad Mini "
             width="3000"
             height="2250"
@@ -143,7 +143,7 @@
 
         <div class="section-image image">
           <img
-            src="/assets/images/dimos/iphone14-dimos.webp"
+            src="../../assets/images/dimos/iphone14-dimos.webp"
             alt="DiMOS on iPad Mini "
             width="3000"
             height="2250"
@@ -175,7 +175,7 @@
 
         <div class="section-image image">
           <img
-            src="/assets/images/dimos/mvc.webp"
+            src="../../assets/images/dimos/mvc.webp"
             alt="DiMOS - Model-View-Controller"
             width="1775"
             height="1574"
@@ -194,7 +194,7 @@
 
         <div class="section-image image">
           <img
-            src="/assets/images/dimos/system-architecture.webp"
+            src="../../assets/images/dimos/system-architecture.webp"
             alt="DiMOS - System Architecture"
             width="1467"
             height="997"
@@ -229,7 +229,7 @@
 
         <div class="section-image image">
           <img
-            src="/assets/images/dimos/iphone12-dimos.webp"
+            src="../../assets/images/dimos/iphone12-dimos.webp"
             alt="DiMOS on iPhone 12"
             width="3000"
             height="2250"
@@ -260,7 +260,7 @@
 
         <div class="section-image image">
           <img
-            src="/assets/images/dimos/dimos-overview-devices.webp"
+            src="../../assets/images/dimos/dimos-overview-devices.webp"
             alt="DiMOS Devices"
             width="6569"
             height="3636"
@@ -284,9 +284,9 @@
       </section>
     </div>
 
-    <script src="/assets/js/hamburger.js"></script>
-    <script src="/assets/js/fade.js"></script>
-    <script src="/assets/js/current-page.js"></script>
-    <script src="/assets/js/progress-bar.js"></script>
+    <script src="../../assets/js/hamburger.js"></script>
+    <script src="../../assets/js/fade.js"></script>
+    <script src="../../assets/js/current-page.js"></script>
+    <script src="../../assets/js/progress-bar.js"></script>
   </body>
 </html>
