--- a/html/projects/dimos.html
+++ b/html/projects/dimos.html
@@ -61,13 +61,13 @@
             <a href="../../index.html" aria-label="Home">Home</a>
           </li>
           <li tabindex="0">
-            <a href="/html/about.html" aria-label="About">About</a>
+            <a href="../about.html" aria-label="About">About</a>
           </li>
           <li tabindex="0">
-            <a href="/html/projects.html" aria-label="Projects">Projects</a>
+            <a href="../projects.html" aria-label="Projects">Projects</a>
           </li>
           <li tabindex="0">
-            <a href="/html/contact.html" aria-label="Contact">Contact</a>
+            <a href="../contact.html" aria-label="Contact">Contact</a>
           </li>
           <li tabindex="0">
             <a href="/blog" aria-label="Blog">Blog</a>
