--- a/html/projects/dimos.html
+++ b/html/projects/dimos.html
@@ -115,7 +115,7 @@
 
         <div class="section-image image">
           <img
-            src="../../assets/images/dimos/ipadmini-dimos.webp"
+            src="portfolio/assets/images/dimos/ipadmini-dimos.webp"
             alt="DiMOS on iPad Mini "
             width="3000"
             height="2250"
@@ -143,7 +143,7 @@
 
         <div class="section-image image">
           <img
-            src="../../assets/images/dimos/iphone14-dimos.webp"
+            src="portfolio/assets/images/dimos/iphone14-dimos.webp"
             alt="DiMOS on iPad Mini "
             width="3000"
             height="2250"
