--- a/404.html
+++ b/404.html
@@ -86,7 +86,9 @@
           The page you're looking for seems to have vanished into the digital
           abyss.
         </p>
-        <p>How about heading back to my <a href="/index.html">homepage</a>?</p>
+        <p>
+          How about heading back to my <a href="../index.html">homepage</a>?
+        </p>
       </section>
     </div>
 
