--- a/404.html
+++ b/404.html
@@ -36,7 +36,7 @@
     <header>
       <nav>
         <div class="logo-container">
-          <a href="../index.html" aria-label="Home">
+          <a href="index.html" aria-label="Home">
             <img
               src="assets/images/logo.webp"
               alt="Logo"
@@ -86,9 +86,7 @@
           The page you're looking for seems to have vanished into the digital
           abyss.
         </p>
-        <p>
-          How about heading back to my <a href="../index.html">homepage</a>?
-        </p>
+        <p>How about heading back to my <a href="index.html">homepage</a>?</p>
       </section>
     </div>
 
